fix: reduce gap between title and logo in contactForm and others

--- a/src/components/atoms/Input/input.module.css
+++ b/src/components/atoms/Input/input.module.css
@@ -118,6 +118,26 @@
   outline: 2.2px solid #006a43;
 }
 
+.greyLight .input {
+  border: 1px solid #006a43;
+  border-radius: 4px;
+  padding: 12px;
+  color: #2f4f4f;
+  background-color: #f2f2f2;
+  font-size: 14px;
+  font-family: 'lexend';
+}
+.greyLight .label {
+  margin-bottom: 4px;
+  color: #ebeced;
+
+}
+
+.greyLight .input:focus{
+  border: 1px solid #FFFF;
+  outline: 2.2px solid #006a43;
+}
+
 .white .icon {
   color: gray;
 }
@@ -130,6 +150,13 @@
   color: gray;
 }
 .grey .input::placeholder {
+  color: #797979;
+}
+
+.greyLight .icon {
+  color: gray;
+}
+.greyLight .input::placeholder {
   color: #797979;
 }
 
